Build the dist and update landing page

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -5,6 +5,7 @@
   -ms-border-radius: $radius;
   border-radius: $radius;
 }
+// change
 @mixin box-shadow($values) {
   -webkit-box-shadow: $values;
   box-shadow: $values;
