--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -9,27 +9,7 @@
 
     <section id="landing">
       <div class="inner">
-        <h1>Welkom</h1>
-        <p>Welkom op onze praktijkwebsite. <nobr>Hier kan u terecht bij:</nobr></p>
-        <ul>
-          <li><a href="/huisarts/raadpleging" title="Raadpleging huisarts dokter Marc De Jaeger">Huisarts Marc De Jaeger</a></li>
-          <li><a href="/huisarts/raadpleging" title="Raadpleging huisarts dokter Sarah Van Thuyne">Huisarts Sara Van Thuyne</a></li>
-          <li><a href="/huisarts/raadpleging" title="Raadpleging huisarts dokter An Loones">Huisarts An Loones (in opleiding)</a></li>
-          <li>&nbsp;</li>
-          <li><a href="/kinderpsycholoog/introductie" title="Kinderpsycholoog Liesje Van De Velde">Kinderpyschologe Liesje Van De Velde</a></li>
-          <li><a href="/kinderpsycholoog/introductie" title="Kinderpsycholoog Els Bernaert">Kinderpsychologe Els Bernaert</a></li>
-          <li><a href="/kinderpsycholoog/introductie" title="Kinderpsycholoog Maaike Buyst">Kinderpyschologe Maaike Buyst</a></li>
-          <li><a href="/kinderpsycholoog/introductie" title="Kinderpsycholoog Evelien Van Dooren">Kinderpyschologe Evelien Van Dooren</a></li>
-          <li>&nbsp;</li>
-          <li><a href="/psycholoog/introductie" title="Psycholoog Mieke Soons">Psychologe Mieke Soons</a></li>
-          <li><a href="/dietist/introductie" title="Diëtiste Céline Stadeus">Voedingsdeskundige Céline Stadeus</a></li>
-          <li><a href="/huisarts/raadpleging" title="Praktijkassistente Shanty Van Zele">Praktijkassistente Shanty Van Zele</a></li>
-        </ul>
-        <div class="images">
-          <img src="/assets/img/praktijk-wachtzaal-2x.jpg" alt="wachtzaal in Praktijkcentrum Lochristi" height="160" width="240">
-          <img src="/assets/img/praktijk-stethoscoop-2x.jpg" alt="stethoscoop van huisarts Marc De Jaeger" height="160" width="140">
-          <img src="/assets/img/praktijk-consultatieruimte-2x.jpg" alt="consultatieruimte van huisarts Marc De Jaeger" height="160" width="241">
-        </div>
+        <h1>Beer plus Code = Website</h1>
       </div>
     </section>
 
