Update to the footer

--- a/src/templates/partials/footer.hbs
+++ b/src/templates/partials/footer.hbs
@@ -1,5 +1,5 @@
 <footer>
   <div class="inner">
-    <p>Website door <a href="http://nabu.io" target="_new" title="Nabu Websites">Nabu.io</a> | <a href="http://sanmax.afsprakenbeheer.be/" target="_blank">Login agenda</a></p>
+    <p> | a Zac Cobb WIP <a href="http://zacpcobb.com" target="_new" title="a Zac Cobb WIP">zacpcobb.com</a> | </p>
   </div>
 </footer>
