--- a/src/templates/partials/header.hbs
+++ b/src/templates/partials/header.hbs
@@ -1,13 +1,13 @@
 <header>
   <div class="inner">
-    <h1>Praktijkcentrum Lochristi</h1>
+    <h1>Hi there</h1>
     <div class="logo">
       <div class="symbol"></div>
       <!-- <div class="praktijk"></div>
       <div class="centrum"></div>
       <div class="lochristi"></div> -->
     </div>
-    <h1>Praktijkcentrum Lochristi</h1>
+    <h1>Hi there!</h1>
     {{> nav}}
   </div>
 </header>
