Add home to menu and update footer

--- a/src/templates/partials/footer.hbs
+++ b/src/templates/partials/footer.hbs
@@ -1,5 +1,6 @@
 <footer>
   <div class="inner">
-    <p> | a Zac Cobb WIP <a href="http://zacpcobb.com" target="_new" title="a Zac Cobb WIP">zacpcobb.com</a> | </p>
+    <p> | a Zac Cobb WIP <a href="http://zacpcobb.com" target="_new" title="a Zac Cobb WIP">zacpcobb.com</a> |
+    <br> working with GruntJS</p>
   </div>
 </footer>
