--- a/src/templates/partials/nav.hbs
+++ b/src/templates/partials/nav.hbs
@@ -1,6 +1,10 @@
 <nav>
   <ul>
     <li>
+      <!-- localhost:9000/contact/ -->
+      <a href="/home">Home</a>
+    </li>
+    <li>
       <!-- localhost:9000/links/ -->
       <a href="/links">Links</a>
     </li>
