--- a/src/templates/about/index.hbs
+++ b/src/templates/about/index.hbs
@@ -3,7 +3,7 @@
 
     <section id="landing">
       <div class="inner">
-        <h1>Beer plus Code = Website</h1>
+        <h1>About Zac</h1>
       </div>
     </section>
 
