--- a/src/templates/playground/index.hbs
+++ b/src/templates/playground/index.hbs
@@ -3,7 +3,21 @@
 
     <section id="landing">
       <div class="inner">
-        <h1>What ripper links here:</h1>
+        <h1>Playground</h1>
+        <p>
+          <!-- start slipsum code -->
+
+          Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become
+          television programs. Some don't, become nothing. She starred in one of the ones that became nothing.
+
+          <!-- please do not remove this line -->
+
+          <div style="display:none;">
+            <a href="http://slipsum.com">lorem ipsum</a></div>
+
+          <!-- end slipsum code -->
+
+        </p>
       </div>
     </section>
 
