--- a/src/templates/portfolio/index.hbs
+++ b/src/templates/portfolio/index.hbs
@@ -3,7 +3,7 @@
 
     <section id="landing">
       <div class="inner">
-        <h1>Beer plus Code = Website</h1>
+        <h1>Zac's portfolio</h1>
       </div>
     </section>
 
