--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -1,31 +1,26 @@
 <!DOCTYPE HTML>
 <html lang="nl">
 
-  <head>
+<head>
+  <!-- This comment has been added to layout.html in src/ -->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="copyright" content="Copyright 2011 all rights reserved by Jan Werkhoven">
+  <meta name="developer" content="Jan Werkhoven jan@nabu.io www.nabu.io" name="developer">
+  <meta name="robots" content="index, follow">
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="copyright" content="Copyright 2011 all rights reserved by Jan Werkhoven">
-    <meta name="developer" content="Jan Werkhoven jan@nabu.io www.nabu.io" name="developer">
-    <meta name="robots" content="index, follow">
+  <link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+  <link href="/assets/css/main.min.css" rel="stylesheet" type="text/css">
+  <script src="/assets/js/main.min.js"></script>
 
-    <link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link href="/assets/css/main.min.css" rel="stylesheet" type="text/css">
-    <script src="/assets/js/main.min.js"></script>
+</head>
 
-  </head>
+<body>
 
-  <body>
+  {{> header}} {{#block "main"}}
+  <h2>Layout</h2> {{/block}} {{> footer}}
 
-    {{> header}}
-
-    {{#block "main"}}
-      <h2>Layout</h2>
-    {{/block}}
-
-    {{> footer}}
-
-  </body>
+</body>
 
 </html>
