Add update to header menu

--- a/src/templates/partials/header.hbs
+++ b/src/templates/partials/header.hbs
@@ -12,7 +12,7 @@
     <!-- <li><a href="https://www.google.com.au">Google in same tab</a></li> -->
     <!-- The title attribute appears when hovering over the link.  -->
     <li>
-      <a href="https://github.com/zacrobat/grunt-homepage" target="_blank" title="Zac's Github Repo">Zacrobat</a>
+      <a href="https://github.com/zacrobat/grunt-homepage" target="_blank" title="Zac's Github Repo">GitHub</a>
     </li>
   </ul>
 
